2015-03-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add classes as run-time descriptors of cl-structs.
	* emacs-lisp/cl-preloaded.el (cl--struct-get-class): New function.
	(cl--make-slot-desc): New constructor.
	(cl--plist-remove, cl--struct-register-child): New functions.
	(cl-struct-define): Rewrite.
	(cl-structure-class, cl-structure-object, cl-slot-descriptor)
	(cl--class): New structs.
	(cl--struct-default-parent): Initialize it here.
	* emacs-lisp/cl-macs.el (cl--find-class): New macro.
	(cl-defsubst, cl--defsubst-expand, cl--sublis): Move before first use.
	(cl--struct-default-parent): New var.
	(cl-defstruct): Adjust to new representation of classes; add
	default parent.  In accessors, signal `wrong-type-argument' rather than
	a generic error.
	(cl-struct-sequence-type, cl-struct-slot-info)
	(cl-struct-slot-offset): Rewrite.
	* emacs-lisp/cl-generic.el (cl--generic-struct-specializers)
	(cl-generic-generalizers): Rewrite.

	* emacs-lisp/macroexp.el (macroexp--debug-eager): New var.
	(internal-macroexpand-for-load): Use it.

	* emacs-lisp/debug.el (debug--implement-debug-on-entry):
	Bind inhibit-debug-on-entry here...
	(debug): Instead of here.

2015-03-18  Dima Kogan  <dima@secretsauce.net>

	Have gud-display-line not display source buffer in gud window.
	* lisp/progmodes/gud.el (gud-display-line): Make display-buffer
	not reuse selected window.  (Bug#17675, Bug#19901, Bug#20034)

2015-03-17  Tassilo Horn  <tsdh@gnu.org>

	* emacs-lisp/byte-run.el (macro-declarations-alist):
	New declaration no-font-lock-keyword.
	(defmacro): Flush font-lock in existing elisp buffers.

	* emacs-lisp/lisp-mode.el (lisp--el-update-after-load)
	(lisp--el-update-macro-regexp, lisp--el-macro-regexp):
	Delete functions and defconst.
	(lisp--el-match-keyword): Rename from lisp--el-match-macro.
	(lisp--el-font-lock-flush-elisp-buffers): New function.
	(lisp-mode-variables): Remove code for updating
	lisp--el-macro-regexp, and add